# image-daemon

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  image_daemon.rst  image_daemon.utils.rst  index.rst  modules.rst
src/image_daemon/: __init__.py  paths.py
src/image_daemon/downloader/: get_data.py
src/image_daemon/utils/: execute_cmd.py  winter_image.py
