[tool.poetry]
name = "image-daemon"
version = "0.0.0"
description = "image handler daemon for focusing and image quality checks for WINTER"
authors = ["Nate Lourie"]
readme = "README.md"
repository = "https://github.com/winter-telescope/image-daemon"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2"
pyro5 = "^5.15"
slack-sdk = "^3.32.0"
astropy = "^6.1.3"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
pylint = "^3.2.7"
ruff = "^0.6.4"
sphinx = "<6.0"
sphinx-rtd-theme = "^2.0.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
